--- a/geoserver/Dockerfile
+++ b/geoserver/Dockerfile
@@ -2,8 +2,14 @@ FROM tomcat:8.5
 
 ARG version=2.13.1
 
-ENV GEOSERVER_DATA_DIR=/var/geoserver
+ENV GEOSERVER_DATA_DIR=/usr/local/tomcat/webapps/geoserver/data
 
-RUN wget -O /tmp/geoserver-war.zip http://sourceforge.net/projects/geoserver/files/GeoServer/${version}/geoserver-${version}-war.zip
+WORKDIR /tmp
 
+RUN wget --progress=bar:force -O geoserver-war.zip http://sourceforge.net/projects/geoserver/files/GeoServer/${version}/geoserver-${version}-war.zip \
+ && unzip geoserver-war.zip \
+ && unzip -d /usr/local/tomcat/webapps/geoserver geoserver.war \
+ && rm -rf geoserver*
+
+VOLUME /usr/local/tomcat/webapps/geoserver/data
 #/usr/local/tomcat
