add nexus & gogs, remove registry

--- a/traefik/docker-compose.yml
+++ b/traefik/docker-compose.yml
@@ -11,6 +11,7 @@ services:
     volumes:
       - ./traefik.toml:/etc/traefik/traefik.toml:ro
       - /var/run/docker.sock:/var/run/docker.sock
+    restart: always
 
 networks:
   default:
