--- a/geoserver/docker-compose.yml
+++ b/geoserver/docker-compose.yml
@@ -12,7 +12,7 @@ services:
     labels:
       - "traefik.enable=true"
       - "traefik.backend.port=8080"
-      - "traefik.frontend.rule=Host:geoserver.localhost"      
+      - "traefik.frontend.rule=Host:geoserver.${HOST_HOSTNAME}"
     volumes:
       - geoserver-data:/var/geoserver
     restart: always
