--- a/nexus/docker-compose.yml
+++ b/nexus/docker-compose.yml
@@ -8,9 +8,9 @@ services:
     labels:
       - "traefik.enable=true"
       - "traefik.nexus.port=8081"
-      - "traefik.nexus.frontend.rule=Host:nexus.localhost"
+      - "traefik.nexus.frontend.rule=Host:nexus.${HOST_HOSTNAME}"
       - "traefik.registry.port=8082"
-      - "traefik.registry.frontend.rule=Host:registry.localhost"
+      - "traefik.registry.frontend.rule=Host:registry.${HOST_HOSTNAME}"
     volumes:
       - nexus-data:/nexus-data
     restart: always
