--- a/portainer/docker-compose.yml
+++ b/portainer/docker-compose.yml
@@ -8,7 +8,7 @@ services:
     labels:
       - "traefik.enable=true"
       - "traefik.backend.port=9000"
-      - "traefik.frontend.rule=Host:portainer.localhost"
+      - "traefik.frontend.rule=Host:portainer.${HOST_HOSTNAME}"
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
     restart: always
