--- a/openldap/.env
+++ b/openldap/.env
@@ -2,4 +2,5 @@ HOST_HOSTNAME=localhost
 LDAP_ORGANISATION=Dev stacks
 LDAP_DOMAIN=localhost
 LDAP_ADMIN_PASSWORD=SecretChangeIt
+LDAP_READONLY_USER_PASSWORD=readonly
 
