gogs - backup/restore

--- a/gogs/docker-compose.yml
+++ b/gogs/docker-compose.yml
@@ -13,6 +13,7 @@ services:
       - "traefik.frontend.rule=Host:gogs.${HOST_HOSTNAME}"
     volumes:
       - gogs-data:/data
+      - ./backup:/backup
     restart: always
 
 volumes:
