--- a/gogs/docker-compose.yml
+++ b/gogs/docker-compose.yml
@@ -14,7 +14,7 @@ services:
     volumes:
       - gogs-data:/data
       - ./backup:/backup
-    restart: always
+    restart: unless-stopped
 
 volumes:
   gogs-data:
