--- a/geoserver/docker-compose.yml
+++ b/geoserver/docker-compose.yml
@@ -15,7 +15,7 @@ services:
       - "traefik.frontend.rule=Host:geoserver.${HOST_HOSTNAME}"
     volumes:
       - geoserver-data:/var/geoserver
-    restart: always
+    restart: unless-stopped
 
 volumes:
   geoserver-data:
