--- a/portainer/docker-compose.yml
+++ b/portainer/docker-compose.yml
@@ -11,7 +11,7 @@ services:
       - "traefik.frontend.rule=Host:portainer.${HOST_HOSTNAME}"
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
-    restart: always
+    restart: unless-stopped
 
 volumes:
   portainer-data:
