--- a/geoserver/docker-compose.yml
+++ b/geoserver/docker-compose.yml
@@ -4,7 +4,7 @@ services:
 
   geoserver:
     container_name: geoserver
-    image: geoserver:2.13.1
+    image: mborne/geoserver:2.14.1
     build: .
     environment:
       - POSTGRES_USER=postgis
