traefik - externalize acme.json

--- a/traefik-letsencrypt/docker-compose.yml
+++ b/traefik-letsencrypt/docker-compose.yml
@@ -12,6 +12,7 @@ services:
     volumes:
       - ./traefik.toml:/etc/traefik/traefik.toml:ro
       - /var/run/docker.sock:/var/run/docker.sock
+      - ./acme.json:/acme.json
     restart: unless-stopped
 
 networks:
