--- a/keycloak/docker-compose.yml
+++ b/keycloak/docker-compose.yml
@@ -4,10 +4,14 @@ services:
 
   keycloak:
     container_name: keycloak
-    image: jboss/keycloak:4.8.3.Final
+    image: jboss/keycloak:6.0.1
     environment:
       - KEYCLOAK_USER=${KEYCLOAK_USER}
       - KEYCLOAK_PASSWORD=${KEYCLOAK_PASSWORD}
+      - DB_VENDOR=postgres
+      - DB_ADDR=postgis
+      - DB_USER=postgis
+      - DB_PASSWORD=postgis
     labels:
       - "traefik.enable=true"
       - "traefik.backend.port=8080"
