update traefik from 1.7 to 2.0, use 2 nodes for elasticsearch and upgrade some stacks

--- a/geonetwork/docker-compose.yml
+++ b/geonetwork/docker-compose.yml
@@ -6,9 +6,7 @@ services:
     container_name: geonetwork
     image: geonetwork:3.8
     labels:
-      - "traefik.enable=true"
-      - "traefik.backend.port=8080"
-      - "traefik.frontend.rule=Host:geonetwork.${HOST_HOSTNAME}"
+      - "traefik.http.routers.geonetwork.rule=Host(`geonetwork.${HOST_HOSTNAME}`)"
     environment:
       - DATA_DIR:/var/lib/geonetwork_data
     volumes:
