--- a/nextcloud/docker-compose.yml
+++ b/nextcloud/docker-compose.yml
@@ -6,9 +6,7 @@ services:
     container_name: nextcloud
     restart: unless-stopped
     labels:
-      - "traefik.enable=true"
-      - "traefik.port=80"
-      - "traefik.frontend.rule=Host:nextcloud.${HOST_HOSTNAME}"
+      - "traefik.http.routers.nextcloud.rule=Host(`nextcloud.${HOST_HOSTNAME}`)"
     volumes:
       - files:/var/www/html
 
