--- a/jenkins/docker-compose.yml
+++ b/jenkins/docker-compose.yml
@@ -8,9 +8,7 @@ services:
     environment:
       - TZ=Europe/Paris
     labels:
-      - "traefik.enable=true"
-      - "traefik.backend.port=8080"
-      - "traefik.frontend.rule=Host:jenkins.${HOST_HOSTNAME}"
+      - "traefik.http.routers.jenkins.rule=Host(`jenkins.${HOST_HOSTNAME}`)"
     volumes:
       - jenkins-data:/var/jenkins_home
     restart: unless-stopped
