--- a/traefik/docker-compose.yml
+++ b/traefik/docker-compose.yml
@@ -4,12 +4,13 @@ services:
 
   traefik:
     container_name: traefik
-    image: traefik:1.7
+    image: traefik:v2.0
+    # Enables the web UI and tells Traefik to listen to docker
+    command: --api.insecure=true --providers.docker
     ports:
       - "80:80"
       - "8888:8080"
     volumes:
-      - ./traefik.toml:/etc/traefik/traefik.toml:ro
       - /var/run/docker.sock:/var/run/docker.sock
     restart: unless-stopped
 
