--- a/whoami/docker-compose.yml
+++ b/whoami/docker-compose.yml
@@ -3,12 +3,9 @@ version: '3.5'
 services:
 
   whoami:
-    container_name: whoami
-    image: containous/whoami:latest
+    image: containous/whoami
     labels:
-      - "traefik.enable=true"
-      - "traefik.backend.port=80"
-      - "traefik.frontend.rule=Host:whoami.${HOST_HOSTNAME}"
+    - "traefik.http.routers.whoami.rule=Host(`whoami.${HOST_HOSTNAME}`)"
     restart: unless-stopped
 
 networks:
