--- a/keycloak/docker-compose.yml
+++ b/keycloak/docker-compose.yml
@@ -13,6 +13,7 @@ services:
       - DB_USER=postgis
       - DB_PASSWORD=postgis
     labels:
+      - "traefik.enable=true"
       - "traefik.http.routers.keycloak.rule=Host(`keycloak.${HOST_HOSTNAME}`)"
     restart: unless-stopped
 
@@ -23,7 +24,7 @@ volumes:
 networks:
   default:
     external:
-      name: webgateway
+      name: devbox
 
 
 
