--- a/owncloud/docker-compose.yml
+++ b/owncloud/docker-compose.yml
@@ -26,6 +26,7 @@ services:
       timeout: 10s
       retries: 5
     labels:
+      - "traefik.enable=true"
       - "traefik.http.routers.owncloud.rule=Host(`owncloud.${HOST_HOSTNAME}`)"
     volumes:
       - files:/mnt/data
@@ -79,5 +80,5 @@ volumes:
 networks:
   default:
     external:
-      name: webgateway
+      name: devbox
 
