--- a/rabbitmq/docker-compose.yml
+++ b/rabbitmq/docker-compose.yml
@@ -11,6 +11,7 @@ services:
     ports:
       - "5672:5672"
     labels:
+      - "traefik.enable=true"
       - "traefik.http.routers.rabbitmq.rule=Host(`rabbitmq.${HOST_HOSTNAME}`)"
       - "traefik.http.services.rabbitmq-service.loadbalancer.server.port=15672"
     restart: unless-stopped
@@ -22,5 +23,5 @@ volumes:
 networks:
   default:
     external:
-      name: webgateway
+      name: devbox
 
