--- a/geonetwork/docker-compose.yml
+++ b/geonetwork/docker-compose.yml
@@ -6,6 +6,7 @@ services:
     container_name: geonetwork
     image: geonetwork:3.8
     labels:
+      - "traefik.enable=true"
       - "traefik.http.routers.geonetwork.rule=Host(`geonetwork.${HOST_HOSTNAME}`)"
     environment:
       - DATA_DIR:/var/lib/geonetwork_data
@@ -20,4 +21,4 @@ volumes:
 networks:
   default:
     external:
-      name: webgateway
+      name: devbox
