--- a/geoserver/docker-compose.yml
+++ b/geoserver/docker-compose.yml
@@ -4,15 +4,15 @@ services:
 
   geoserver:
     container_name: geoserver
-    image: mborne/geoserver:2.15.3
+    image: mborne/geoserver:2.16.1
     build:
       context: .
       args:
-        version: '2.15.3'
+        version: '2.16.1'
     environment:
-      - POSTGRES_USER=postgis
-      - POSTGRES_PASSWORD=postgis
+      - "CATALINA_OPTS=-Xms512m -Xmx512m"
     labels:
+      - "traefik.enable=true"
       - "traefik.http.routers.geoserver.rule=Host(`geoserver.${HOST_HOSTNAME}`)"
       - "traefik.http.routers.geoserver.middlewares=cors"
       - "traefik.http.middlewares.cors.headers.accesscontrolallowmethods=GET,PUT,POST,DELETE,OPTIONS,PUT"
@@ -29,4 +29,4 @@ volumes:
 networks:
   default:
     external:
-      name: webgateway
+      name: devbox
