--- a/jenkins/docker-compose.yml
+++ b/jenkins/docker-compose.yml
@@ -8,6 +8,7 @@ services:
     environment:
       - TZ=Europe/Paris
     labels:
+      - "traefik.enable=true"
       - "traefik.http.routers.jenkins.rule=Host(`jenkins.${HOST_HOSTNAME}`)"
     volumes:
       - jenkins-data:/var/jenkins_home
@@ -20,4 +21,4 @@ volumes:
 networks:
   default:
     external:
-      name: webgateway
+      name: devbox
