--- a/nexus/docker-compose.yml
+++ b/nexus/docker-compose.yml
@@ -5,13 +5,8 @@ services:
   nexus:
     container_name: nexus
     image: sonatype/nexus3:3.19.1
-    # labels:
-    #   - "traefik.enable=true"
-    #   - "traefik.nexus.port=8081"
-    #   - "traefik.nexus.frontend.rule=Host:nexus.${HOST_HOSTNAME}"
-    #   - "traefik.registry.port=8082"
-    #   - "traefik.registry.frontend.rule=Host:registry.${HOST_HOSTNAME}"
     labels:
+      - "traefik.enable=true"
       - "traefik.http.routers.nexus.rule=Host(`nexus.${HOST_HOSTNAME}`)"
       - "traefik.http.services.nexus-service.loadbalancer.server.port=8081"
       - "traefik.http.routers.registry.rule=Host(`registry.${HOST_HOSTNAME}`)"
@@ -27,4 +22,4 @@ volumes:
 networks:
   default:
     external:
-      name: webgateway
+      name: devbox
