vault - add basic commands

--- a/geoserver/Dockerfile
+++ b/geoserver/Dockerfile
@@ -1,6 +1,6 @@
 FROM tomcat:8.5-slim
 
-ARG version=2.15.3
+ARG version=2.16.1
 
 ENV GEOSERVER_DATA_DIR=/var/geoserver
 ENV geoserver.xframe.shouldSetPolicy=false
@@ -8,7 +8,7 @@ ENV geoserver.xframe.shouldSetPolicy=false
 WORKDIR /tmp
 
 RUN apt-get update \
- && apt-get install -y wget \
+ && apt-get install -y wget unzip \
  && wget --progress=bar:force -O geoserver-war.zip http://sourceforge.net/projects/geoserver/files/GeoServer/${version}/geoserver-${version}-war.zip \
  && unzip geoserver-war.zip \
  && rm -rf /usr/local/tomcat/webapps/ROOT \
