--- a/keycloak/docker-compose.yml
+++ b/keycloak/docker-compose.yml
@@ -4,14 +4,18 @@ services:
 
   keycloak:
     container_name: keycloak
-    image: jboss/keycloak:6.0.1
+    image: jboss/keycloak:13.0.1
     environment:
-      - KEYCLOAK_USER=${KEYCLOAK_USER}
-      - KEYCLOAK_PASSWORD=${KEYCLOAK_PASSWORD}
       - DB_VENDOR=postgres
+      - DB_DATABASE=keycloak
       - DB_ADDR=postgis
-      - DB_USER=postgis
-      - DB_PASSWORD=postgis
+      - DB_USER=${POSTGRES_USER}
+      - DB_PASSWORD=${POSTGRES_PASSWORD}
+      - KEYCLOAK_WELCOME_THEME=custom
+      - KEYCLOAK_DEFAULT_THEME=keycloak
+    volumes:
+      - keycloak-data:/opt/jboss/keycloak/standalone
+      - ./custom-theme:/opt/jboss/keycloak/themes/custom:ro
     labels:
       - "traefik.enable=true"
       - "traefik.http.routers.keycloak.rule=Host(`keycloak.${HOST_HOSTNAME}`)"
