--- a/kibana/docker-compose.yml
+++ b/kibana/docker-compose.yml
@@ -4,10 +4,12 @@ services:
 
   kibana:
     container_name: kibana
-    image: docker.elastic.co/kibana/kibana:7.4.2
+    image: docker.elastic.co/kibana/kibana:7.15.2
     environment:
       - "SERVER_NAME=kibana.${HOST_HOSTNAME}"
       - "ELASTICSEARCH_HOSTS=${ES_URL}"
+    ports:
+      - "127.0.0.1:5601:5601"
     labels:
       - "traefik.enable=true"
       - "traefik.http.routers.kibana.rule=Host(`kibana.${HOST_HOSTNAME}`)"
