--- a/traefik/manifest/daemon-set.yaml
+++ b/traefik/manifest/daemon-set.yaml
@@ -8,7 +8,7 @@ spec:
       serviceAccountName: traefik-ingress-controller
       terminationGracePeriodSeconds: 60
       containers:
-        - image: traefik:v2.4
+        - image: traefik:v2.7
           name: traefik-ingress-lb
           ports:
             - name: http
@@ -27,19 +27,23 @@ spec:
               add:
                 - NET_BIND_SERVICE
           args:
-            # Enable the dashboard without requiring a password. Not recommended
-            # for production.
+            # Enable the dashboard without requiring a password.
+            # Not recommended for production.
             - --api.insecure
             - --api.dashboard
 
             # Specify that we want to use Traefik as an Ingress Controller.
             - --providers.kubernetesingress
+            - --providers.kubernetescrd
 
             # Define two entrypoint ports, and setup a redirect from HTTP to HTTPS.
             - --entryPoints.web.address=:80
             - --entryPoints.websecure.address=:443
-            - --entrypoints.web.http.redirections.entryPoint.to=websecure
-            - --entrypoints.web.http.redirections.entryPoint.scheme=https
+            # https://doc.traefik.io/traefik/routing/providers/kubernetes-ingress/#tls
+            - --entrypoints.websecure.http.tls
+
+            # - --entrypoints.web.http.redirections.entryPoint.to=websecure
+            # - --entrypoints.web.http.redirections.entryPoint.scheme=https
 
             # Enable debug logging. Useful to work out why something might not be
             # working. Fetch logs of the pod.
