--- a/argocd/manifest/base/ingress.yaml
+++ b/argocd/manifest/base/ingress.yaml
@@ -6,6 +6,7 @@ metadata:
   namespace: argocd
 spec:
   entryPoints:
+    - web
     - websecure
   routes:
     - kind: Rule
@@ -22,5 +23,5 @@ spec:
           port: 80
           scheme: h2c
   # tls:
-  #   certResolver: default
+  #   # certResolver: default
   #   options: {}
