--- a/jenkins/manifest/base/deployment.yaml
+++ b/jenkins/manifest/base/deployment.yaml
@@ -14,6 +14,10 @@ spec:
         app: jenkins
     spec:
       serviceAccountName: jenkins
+      securityContext:
+        runAsUser: 1000
+        runAsGroup: 1000
+        fsGroup: 1000
       containers:
       - name: jenkins
         image: jenkins/jenkins:lts
