--- a/jenkins/manifest/base/pvc.yaml
+++ b/jenkins/manifest/base/pvc.yaml
@@ -2,11 +2,10 @@ apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   name: jenkins-pvc
-  namespace: jenkins
 spec:
   accessModes:
     - ReadWriteOnce
-  storageClassName: local-path
+  storageClassName: jenkins-storage
   resources:
     requests:
       storage: 8Gi
