jenkins - deployment -> statefulset

--- a/jenkins/manifest/base/kustomization.yaml
+++ b/jenkins/manifest/base/kustomization.yaml
@@ -9,7 +9,7 @@ commonLabels:
 resources:
   - namespace.yaml
   - pvc.yaml
-  - deployment.yaml
   - service.yaml
+  - statefulset.yaml
   - ingress.yaml
   - rbac.yaml
