--- a/vault/config.json
+++ b/vault/config.json
@@ -6,11 +6,6 @@
     },
     "default_lease_ttl": "168h",
     "max_lease_ttl": "720h",
-    "listener": {
-        "tcp": {
-            "address": "0.0.0.0:8200",
-            "tls_disable": "true"
-        }
-    },
-    "ui": true
+    "ui": true,
+    "disable_mlock": true
 }
