--- a/traefik/manifest/config-map.yaml
+++ b/traefik/manifest/config-map.yaml
@@ -2,17 +2,17 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: traefik-config-static
-  namespace: default
 data:
   traefik.yml: |
     entryPoints:
       web:
         address: :80
-        http:
-          redirections:
-            entryPoint:
-              to: websecure
-              scheme: https
+        http:{}
+        # http:
+        #   redirections:
+        #     entryPoint:
+        #       to: websecure
+        #       scheme: https
       websecure:
         address: ':443'
         http:
@@ -21,6 +21,9 @@ data:
     providers:
       kubernetesCRD: {}
       kubernetesIngress: {}
+
+    pilot:
+      enabled: false
 
     api:
       dashboard: true
